<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_super_dark"
    tools:context=".ui.activity.ForumReplyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="128dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_bg"
            app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
            app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/material_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="?attr/homeAsUpIndicator" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding_horizontal">

            <TextView
                android:id="@+id/forum_creator_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/forum_reply_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/balas_forum"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reply_attach_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/upload_file"
                android:textColor="@color/blue_primary"
                android:textSize="16sp"
                app:rippleColor="?attr/colorControlHighlight" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/attachment_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#E6FFFFFF"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                app:shapeAppearance="@style/ShapeAppearance.App.MaterialCardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/attachment_file_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:scrollHorizontally="true"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                        <TextView
                            android:id="@+id/attachment_file_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_delete_attachment"
                        style="@style/App.BackButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_close" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/forum_your_reply_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white"
                android:textIsSelectable="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="100dp"
                android:hint="@string/tulis_pesan_disini"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forum_reply_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/send_reply_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_super_dark"
        android:padding="@dimen/activity_padding_horizontal"
        app:layout_anchor="@id/nested_scroll_view"
        app:layout_anchorGravity="bottom|end">

        <Button
            android:id="@+id/btn_send_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kirim" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>